--- a/DimensionalityReduction.ipynb
+++ b/DimensionalityReduction.ipynb
@@ -9,28 +9,33 @@
     "```\n",
     "    Linear:\n",
     "        PCA\n",
+    "        Dual PCA\n",
     "    \n",
     "    Manifold Learning: \n",
     "        MDS(Multi Dimensional Scaling)\n",
-    "        \n",
-    "        \n",
+    "        Isomap\n",
+    "        LLE (Locally Linear Embedding)\n",
+    "        Spectral Embedding (Laplacian Eigen Map)\n",
+    "        t-SNE\n",
     "```    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "%history -g -f test.txt "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/pandas/compat/__init__.py:117: UserWarning:\n",
+      "\n",
+      "Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -49,6 +54,52 @@
     "from plotly.subplots import make_subplots\n",
     "import pandas as pd\n",
     "from sklearn.metrics.pairwise import euclidean_distances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Prepare Data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset1: (1797, 64)\n",
+      "Dataset2: (150, 4)\n",
+      "Dataset3: (1000, 3)\n",
+      "Dataset4: (1000, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dataset1\n",
+    "digits = load_digits()\n",
+    "X_digits = digits.data\n",
+    "y_digits = digits.target\n",
+    "\n",
+    "# Dataset2\n",
+    "iris = load_iris()\n",
+    "X_iris = iris.data\n",
+    "y_iris = iris.target\n",
+    "\n",
+    "# Dataset3\n",
+    "X_s_curve, color = make_s_curve(n_samples=1000, noise=0.0, random_state=0)\n",
+    "\n",
+    "# Dataset4\n",
+    "X_swiss_role,y_swiss_role = make_swiss_roll(n_samples=1000, noise=0.0, random_state=0)\n",
+    "\n",
+    "print(\"Dataset1: %s\" % (X_digits.shape, ))\n",
+    "print(\"Dataset2: %s\" % (X_iris.shape, ))\n",
+    "print(\"Dataset3: %s\" % (X_s_curve.shape, ))\n",
+    "print(\"Dataset4: %s\" % (X_swiss_role.shape, ))"
    ]
   },
   {
