Completed Dimensionality Reduction Algorithms

--- a/DimensionalityReduction.ipynb
+++ b/DimensionalityReduction.ipynb
@@ -22,20 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/pandas/compat/__init__.py:117: UserWarning:\n",
-      "\n",
-      "Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -49,6 +38,7 @@
     "from sklearn.manifold import Isomap\n",
     "from sklearn.manifold import LocallyLinearEmbedding\n",
     "from sklearn.manifold import SpectralEmbedding\n",
+    "from sklearn.manifold import TSNE\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
@@ -65,20 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset1: (1797, 64)\n",
-      "Dataset2: (150, 4)\n",
-      "Dataset3: (1000, 3)\n",
-      "Dataset4: (1000, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dataset1\n",
     "digits = load_digits()\n",
@@ -104,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,10 +464,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Error (digits dataset): %s\" % np.around(lle_digits.reconstruction_error_, 6))\n",
-    "print(\"Error (iris dataset): %s\" % np.around(lle_iris.reconstruction_error_, 6))\n",
-    "print(\"Error (s-curve dataset): %s\" % np.around(lle_s_curve.reconstruction_error_, 6))\n",
-    "print(\"Error (swiss-role dataset): %s\" % np.around(lle_swiss_role.reconstruction_error_, 6))\n"
+    "print(\"Error (digits dataset): %s\" % np.around(lle_digits.reconstruction_error_, 7))\n",
+    "print(\"Error (iris dataset): %s\" % np.around(lle_iris.reconstruction_error_, 7))\n",
+    "print(\"Error (s-curve dataset): %s\" % np.around(lle_s_curve.reconstruction_error_, 7))\n",
+    "print(\"Error (swiss-role dataset): %s\" % np.around(lle_swiss_role.reconstruction_error_, 7))\n"
    ]
   },
   {
@@ -588,7 +567,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tsne_digits = TSNE(n_components = 2,perplexity=10)\n",
+    "# Fit the data from X, and returns the embedded coordinates\n",
+    "X_digits = tsne_digits.fit_transform(X_digits) \n",
+    "\n",
+    "tsne_iris = TSNE(n_components = 2,perplexity=10)\n",
+    "# Fit the data from X, and returns the embedded coordinates\n",
+    "X_iris = tsne_digits.fit_transform(X_iris) \n",
+    "\n",
+    "tsne_s_curve = TSNE(n_components = 2,perplexity=10)\n",
+    "# Fit the data from X, and returns the embedded coordinates\n",
+    "X_s_curve = tsne_digits.fit_transform(X_s_curve) \n",
+    "\n",
+    "tsne_swiss_role = TSNE(n_components = 2,perplexity=10)\n",
+    "# Fit the data from X, and returns the embedded coordinates\n",
+    "X_swiss_role = tsne_digits.fit_transform(X_s_curve) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_2d_interactive(X_digits, y_digits, X_iris, y_iris)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
