--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset1: (1797, 64)\n",
+      "Dataset2: (150, 4)\n",
+      "Dataset2: (750, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# Dataset1\n",
     "digits = load_digits()\n",
@@ -416,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,9 +434,17 @@
     "pca_digits = decomposition.PCA(n_components=10)\n",
     "# Fit the model with X and apply the dimensionality reduction on X.\n",
     "X_digits = pca_digits.fit_transform(X_digits_features) \n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Make sure graph is fully connected. \n",
-    "spectral_digits = SpectralClustering(n_clusters=10, n_components=10, affinity='rbf', assign_labels='kmeans', n_init=10)\n",
+    "spectral_digits = SpectralClustering(n_clusters=10, n_components=3, affinity='rbf', assign_labels='kmeans', n_init=10)\n",
     "y_pred_digits = spectral_digits.fit_predict(X_digits)"
    ]
   },
@@ -440,6 +458,13 @@
     "print(\"Completeness (Digits): %0.3f\" % completeness_score(y_digits, y_pred_digits))\n",
     "print(\"V-measure (Digits): %0.3f\" % v_measure_score(y_digits, y_pred_digits))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -447,6 +472,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
