--- a/PreprocessingSteps.ipynb
+++ b/PreprocessingSteps.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -114,7 +114,10 @@
     "from plotly.subplots import make_subplots\n",
     "import plotly.graph_objects as go\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.linear_model import BayesianRidge"
    ]
   },
   {
@@ -126,11 +129,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-122.23</td>\n",
+       "      <td>37.88</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>880.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>8.3252</td>\n",
+       "      <td>452600.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-122.22</td>\n",
+       "      <td>37.86</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>7099.0</td>\n",
+       "      <td>1106.0</td>\n",
+       "      <td>2401.0</td>\n",
+       "      <td>1138.0</td>\n",
+       "      <td>8.3014</td>\n",
+       "      <td>358500.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>7.2574</td>\n",
+       "      <td>352100.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1274.0</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>558.0</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>5.6431</td>\n",
+       "      <td>341300.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1627.0</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>259.0</td>\n",
+       "      <td>3.8462</td>\n",
+       "      <td>342200.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0    -122.23     37.88                41.0        880.0           129.0   \n",
+       "1    -122.22     37.86                21.0       7099.0          1106.0   \n",
+       "2    -122.24     37.85                52.0       1467.0           190.0   \n",
+       "3    -122.25     37.85                52.0       1274.0           235.0   \n",
+       "4    -122.25     37.85                52.0       1627.0           280.0   \n",
+       "\n",
+       "   population  households  median_income  median_house_value ocean_proximity  \n",
+       "0       322.0       126.0         8.3252            452600.0        NEAR BAY  \n",
+       "1      2401.0      1138.0         8.3014            358500.0        NEAR BAY  \n",
+       "2       496.0       177.0         7.2574            352100.0        NEAR BAY  \n",
+       "3       558.0       219.0         5.6431            341300.0        NEAR BAY  \n",
+       "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"/Users/ukannika/work/personal/machine-learning/datasets/housing.csv\", sep=\",\")\n",
     "df.head()"
@@ -175,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -184,7 +311,10 @@
     "simple_imputer = SimpleImputer(missing_values=np.nan, strategy='mean', fill_value=None, \n",
     "                               verbose=0, copy=True, add_indicator=False)\n",
     "\n",
-    "iterative_imputer = IterativeImputer(estimator='BayesianRidge', missing_values=np.nan, \n",
+    "simple_imputer_categorical = SimpleImputer(missing_values=np.nan, strategy='most_frequent', fill_value=None, \n",
+    "                               verbose=0, copy=True, add_indicator=False)\n",
+    "\n",
+    "iterative_imputer = IterativeImputer(estimator= BayesianRidge(), missing_values=np.nan, \n",
     "                                     sample_posterior=False, max_iter=10, tol=0.001, n_nearest_features=None, \n",
     "                                     initial_strategy='mean', imputation_order='ascending', skip_complete=False, \n",
     "                                     min_value=None, max_value=None, verbose=0, random_state=None,\n",
@@ -202,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -307,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -330,15 +460,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Dataset Shape (16512, 10)\n",
+      "Test Dataset Shape (4128, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "train_set, test_set = train_test_split(df, test_size=0.2, random_state=42, shuffle=True, stratify=df['income_category'])\n",
-    "print(\"Train Dataset Shape %s\" % (train_set.shape,))\n",
-    "print(\"Test Dataset Shape %s\" % (test_set.shape,))\n",
     "\n",
     "# Now we should remove the income_category attribute, so the data is back to its original state:\n",
     "train_set = train_set.drop(\"income_category\", axis=1)\n",
@@ -421,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,41 +688,143 @@
     "\n",
     "# A transformer to apply to apply on numerical features.\n",
     "numeric_transformer = Pipeline(steps=[\n",
-    "    ('imputer', SimpleImputer(strategy='median')),\n",
-    "    ('scaler', StandardScaler())])\n",
-    "\n"
+    "    ('imputer', simple_imputer),\n",
+    "    ('scaler', std_scalar)])\n",
+    "\n",
+    "numeric_transformer_iterative_imputer = Pipeline(steps=[\n",
+    "    ('imputer', iterative_imputer),\n",
+    "    ('scaler', std_scalar)])\n",
+    "\n",
+    "numeric_transformer_knn_imputer = Pipeline(steps=[\n",
+    "    ('imputer', knn_imputer),\n",
+    "    ('scaler', std_scalar)])\n",
+    "\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('imputer', simple_imputer_categorical),\n",
+    "    ('onehot', one_hot_encoder)])\n",
+    "\n",
+    "categorical_transformer_knn_imputer = Pipeline(steps=[\n",
+    "    ('imputer', knn_imputer),\n",
+    "    ('onehot', one_hot_encoder)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numeric_features = ['age', 'fare']\n",
-    "numeric_transformer = Pipeline(steps=[\n",
-    "    ('imputer', SimpleImputer(strategy='median')),\n",
-    "    ('scaler', StandardScaler())])\n",
-    "\n",
-    "categorical_features = ['embarked', 'sex', 'pclass']\n",
-    "categorical_transformer = Pipeline(steps=[\n",
-    "    ('imputer', SimpleImputer(strategy='constant', fill_value='missing')),\n",
-    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))])\n",
-    "\n",
-    "preprocessor = ColumnTransformer(\n",
+    "preprocessor_simple_imputer = ColumnTransformer(\n",
     "    transformers=[\n",
     "        ('num', numeric_transformer, numeric_features),\n",
+    "        ('cat', categorical_transformer, categorical_features)])\n",
+    "\n",
+    "preprocessor_iterative_imputer = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numeric_transformer_iterative_imputer, numeric_features),\n",
+    "        ('cat', categorical_transformer, categorical_features)])\n",
+    "\n",
+    "preprocessor_knn_imputer = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numeric_transformer_knn_imputer, numeric_features),\n",
     "        ('cat', categorical_transformer, categorical_features)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "preprocessed_simple_imputer_train_set = preprocessor_simple_imputer.fit_transform(train_set)\n",
+    "preprocessed_iterative_imputer_train_set = preprocessor_iterative_imputer.fit_transform(train_set)\n",
+    "preprocessed_knn_imputer_train_set = preprocessor_knn_imputer.fit_transform(train_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['NEAR BAY' '<1H OCEAN' 'INLAND' 'NEAR OCEAN' 'ISLAND']\n",
+      "(16512, 13)\n",
+      "(16512, 13)\n",
+      "(16512, 13)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.57167919, -0.73324997,  0.7474863 ,  0.2907333 ,  0.2890765 ,\n",
+       "       -0.15293427,  0.25028783,  2.03800448,  1.        ,  0.        ,\n",
+       "        0.        ,  0.        ,  0.        ])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(df['ocean_proximity'].unique())\n",
+    "print(preprocessed_simple_imputer_train_set.shape)\n",
+    "print(preprocessed_iterative_imputer_train_set.shape)\n",
+    "print(preprocessed_knn_imputer_train_set.shape)\n",
+    "preprocessed_knn_imputer_train_set[1, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check if there are any nan values in training sets: \n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Check if there are any nan values in training sets: \")\n",
+    "print(np.isnan(preprocessed_simple_imputer_train_set).any())\n",
+    "print(np.isnan(preprocessed_simple_imputer_train_set).any())\n",
+    "print(np.isnan(preprocessed_simple_imputer_train_set).any())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Finally we have the datasets for train, test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt(X=preprocessed_simple_imputer_train_set, \n",
+    "           fname=\"/Users/ukannika/work/personal/machine-learning/datasets/train_set_simple_imputer.csv\", \n",
+    "           fmt=\"%1.3f\", delimiter=\",\")\n",
+    "\n",
+    "np.savetxt(X=preprocessed_simple_imputer_train_set, \n",
+    "           fname=\"/Users/ukannika/work/personal/machine-learning/datasets/train_set_iterative_imputer.csv\", \n",
+    "           fmt=\"%1.3f\", delimiter=\",\")\n",
+    "\n",
+    "np.savetxt(X=preprocessed_simple_imputer_train_set, \n",
+    "           fname=\"/Users/ukannika/work/personal/machine-learning/datasets/train_set_knn_imputer.csv\", \n",
+    "           fmt=\"%1.3f\", delimiter=\",\")"
+   ]
   }
  ],
  "metadata": {
