--- a/RegressionAlgorithms.ipynb
+++ b/RegressionAlgorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import time as time\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.linear_model import SGDRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "from sklearn.gaussian_process.kernels import RBF, WhiteKernel, RationalQuadratic, ExpSineSquared"
    ]
   },
   {
@@ -27,9 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "housing_features_simple_imputer (16512, 13) \n",
+      "housing_features_iterative_imputer (16512, 13) \n",
+      "housing_features_knn_imputer (16512, 13) \n",
+      "housing_labels (16512, 1) \n",
+      "test_housing_features (4128, 13) \n",
+      "test_housing_labels (4128, 1) \n"
+     ]
+    }
+   ],
    "source": [
     "housing_features_simple_imputer = pd.read_csv(\"/Users/ukannika/work/personal/machine-learning/datasets/housing_features_simple_imputer.csv\", \n",
     "                 sep=\",\", header=None)\n",
@@ -76,9 +96,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE : 4503381003.606 \n",
+      "RMSE : 67107.235 \n",
+      "MAE : 67107.235 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/_base.py:533: RuntimeWarning: internal gelsd driver lwork query error, required iwork dimension not returned. This is likely the result of LAPACK bug 0038, fixed in LAPACK 3.2.2 (released July 21, 2010). Falling back to 'gelss' driver.\n",
+      "  linalg.lstsq(X, y)\n"
+     ]
+    }
+   ],
    "source": [
     "linear_regression = LinearRegression().fit(housing_features_simple_imputer, housing_labels)\n",
     "housing_predictions = linear_regression.predict(test_housing_features)\n",
@@ -117,13 +155,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "linear_regression.coef_"
    ]
@@ -140,9 +171,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE : 4504446927.395 \n",
+      "RMSE : 67115.177 \n",
+      "MAE : 67115.177 \n"
+     ]
+    }
+   ],
    "source": [
     "# For this example, we may not see any improve by using Lasso/Ridge Regression.\n",
     "# Tune hyperparameter alpha\n",
@@ -257,6 +298,291 @@
     "print(\"MSE : %0.3f \" % mse)\n",
     "print(\"RMSE : %0.3f \" % rmse)\n",
     "print(\"MAE : %0.3f \" % rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Stochastic Gradient Descent\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE : 4549436418.264 \n",
+      "RMSE : 67449.510 \n",
+      "MAE : 67449.510 \n"
+     ]
+    }
+   ],
+   "source": [
+    "sgd_regressor = SGDRegressor(loss='squared_loss', penalty='l2', alpha=0.01, max_iter=2000, verbose=0, \n",
+    "                                        random_state=None, learning_rate='invscaling', \n",
+    "                                        eta0=0.01, power_t=0.25, \n",
+    "                                        early_stopping=True, validation_fraction=0.1,\n",
+    "                                        n_iter_no_change=5, warm_start=False,\n",
+    "                                        average=False)\n",
+    "\n",
+    "sgd_regressor = sgd_regressor.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
+    "\n",
+    "housing_predictions = sgd_regressor.predict(test_housing_features)\n",
+    "\n",
+    "# Calculate Error\n",
+    "mse = mean_squared_error(y_true=test_housing_labels, y_pred=housing_predictions, squared=True)\n",
+    "rmse = mean_squared_error(y_true=test_housing_labels, y_pred=housing_predictions, squared=False)\n",
+    "mae = mean_absolute_error(y_true=test_housing_labels, y_pred=housing_predictions)\n",
+    "\n",
+    "print(\"MSE : %0.3f \" % mse)\n",
+    "print(\"RMSE : %0.3f \" % rmse)\n",
+    "print(\"MAE : %0.3f \" % rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Decision Trees\n",
+    "\n",
+    "High Depth => High Variance => Bagging <br>\n",
+    "Low Depth  => High Bias     => Boosting <br>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE : 0.000 \n",
+      "RMSE : 0.000 \n",
+      "MAE : 0.000 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# See how decision tree with full depth overfit our model. \n",
+    "decision_tree_regressor = DecisionTreeRegressor(criterion='mse', splitter='best', max_depth=None, \n",
+    "                                  min_samples_split=2, min_samples_leaf=1, \n",
+    "                                  min_weight_fraction_leaf=0.0, max_features=None, random_state=None, \n",
+    "                                  max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+    "                                  min_impurity_split=None, presort='deprecated',\n",
+    "                                  ccp_alpha=0.0)\n",
+    "\n",
+    "decision_tree_regressor = decision_tree_regressor.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
+    "\n",
+    "\n",
+    "housing_predictions = decision_tree_regressor.predict(housing_features_simple_imputer)\n",
+    "\n",
+    "# Calculate Error\n",
+    "mse = mean_squared_error(y_true=housing_labels, y_pred=housing_predictions, squared=True)\n",
+    "rmse = mean_squared_error(y_true=housing_labels, y_pred=housing_predictions, squared=False)\n",
+    "mae = mean_absolute_error(y_true=housing_labels, y_pred=housing_predictions)\n",
+    "\n",
+    "print(\"MSE : %0.3f \" % mse)\n",
+    "print(\"RMSE : %0.3f \" % rmse)\n",
+    "print(\"MAE : %0.3f \" % rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Better Evaluation Using Cross-Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Score 70205 \n",
+      "MSE : 5454103368.506 \n",
+      "RMSE : 73851.902 \n",
+      "MAE : 73851.902 \n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = cross_val_score(estimator=decision_tree_regressor, X=housing_features_simple_imputer, y=housing_labels, \n",
+    "                cv=10, scoring=\"neg_mean_squared_error\")\n",
+    "tree_rmse_scores = np.sqrt(-scores)\n",
+    "print(\"Validation Score %d \" %tree_rmse_scores.mean())\n",
+    "\n",
+    "\n",
+    "## Check prediction score\n",
+    "housing_predictions = decision_tree_regressor.predict(test_housing_features)\n",
+    "\n",
+    "# Calculate Error\n",
+    "mse = mean_squared_error(y_true=test_housing_labels, y_pred=housing_predictions, squared=True)\n",
+    "rmse = mean_squared_error(y_true=test_housing_labels, y_pred=housing_predictions, squared=False)\n",
+    "mae = mean_absolute_error(y_true=test_housing_labels, y_pred=housing_predictions)\n",
+    "\n",
+    "print(\"MSE : %0.3f \" % mse)\n",
+    "print(\"RMSE : %0.3f \" % rmse)\n",
+    "print(\"MAE : %0.3f \" % rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bagging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE : 2602983807.711 \n",
+      "RMSE : 51019.445 \n",
+      "MAE : 51019.445 \n"
+     ]
+    }
+   ],
+   "source": [
+    "random_forest_regressor = RandomForestRegressor(n_estimators=100, criterion='mse',\n",
+    "                                             max_depth=None, min_samples_split=5, min_samples_leaf=1, \n",
+    "                                             min_weight_fraction_leaf=0.0, max_features='auto', max_leaf_nodes=None, \n",
+    "                                             min_impurity_decrease=0.0, min_impurity_split=None, bootstrap=True, \n",
+    "                                             oob_score=True, \n",
+    "                                             n_jobs=None, random_state=None, verbose=0, \n",
+    "                                             warm_start=False, \n",
+    "                                             ccp_alpha=0.0, max_samples=None)\n",
+    "\n",
+    "random_forest_regressor = random_forest_regressor.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
+    "\n",
+    "\n",
+    "housing_predictions = random_forest_regressor.predict(test_housing_features)\n",
+    "\n",
+    "# Calculate Error\n",
+    "mse = mean_squared_error(y_true=test_housing_labels, y_pred=housing_predictions, squared=True)\n",
+    "rmse = mean_squared_error(y_true=test_housing_labels, y_pred=housing_predictions, squared=False)\n",
+    "mae = mean_absolute_error(y_true=test_housing_labels, y_pred=housing_predictions)\n",
+    "\n",
+    "print(\"MSE : %0.3f \" % mse)\n",
+    "print(\"RMSE : %0.3f \" % rmse)\n",
+    "print(\"MAE : %0.3f \" % rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Boosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE : 2182732140.891 \n",
+      "RMSE : 46719.719 \n",
+      "MAE : 46719.719 \n"
+     ]
+    }
+   ],
+   "source": [
+    "gradient_boosting_regressor = GradientBoostingRegressor(loss='ls', learning_rate=0.1, n_estimators=1000, subsample=1.0, \n",
+    "                                      criterion='friedman_mse', min_samples_split=2, min_samples_leaf=1, \n",
+    "                                      min_weight_fraction_leaf=0.0, max_depth=4, min_impurity_decrease=0.0,\n",
+    "                                      min_impurity_split=None, init=None, random_state=None, \n",
+    "                                      max_features=None, alpha=0.9, verbose=0, max_leaf_nodes=None, \n",
+    "                                      warm_start=False, presort='deprecated', validation_fraction=0.1,\n",
+    "                                      n_iter_no_change=None, tol=0.0001, ccp_alpha=0.0)\n",
+    "\n",
+    "gradient_boosting_regressor = gradient_boosting_regressor.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
+    "\n",
+    "\n",
+    "housing_predictions = gradient_boosting_regressor.predict(test_housing_features)\n",
+    "\n",
+    "# Calculate Error\n",
+    "mse = mean_squared_error(y_true=test_housing_labels, y_pred=housing_predictions, squared=True)\n",
+    "rmse = mean_squared_error(y_true=test_housing_labels, y_pred=housing_predictions, squared=False)\n",
+    "mae = mean_absolute_error(y_true=test_housing_labels, y_pred=housing_predictions)\n",
+    "\n",
+    "print(\"MSE : %0.3f \" % mse)\n",
+    "print(\"RMSE : %0.3f \" % rmse)\n",
+    "print(\"MAE : %0.3f \" % rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Guassian Process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., ..., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k1 = 66.0**2 * RBF(length_scale=67.0)  # long term smooth rising trend\n",
+    "k2 = 2.4**2 * RBF(length_scale=90.0) \\\n",
+    "    * ExpSineSquared(length_scale=1.3, periodicity=1.0)  # seasonal component\n",
+    "# medium term irregularity\n",
+    "k3 = 0.66**2 \\\n",
+    "    * RationalQuadratic(length_scale=1.2, alpha=0.78)\n",
+    "k4 = 0.18**2 * RBF(length_scale=0.134) \\\n",
+    "    + WhiteKernel(noise_level=0.19**2)  # noise terms\n",
+    "kernel_gpml = k1 + k2 + k3 + k4\n",
+    "gaussian_process_regression = GaussianProcessRegressor(kernel=k1, alpha=0.001, \n",
+    "                                                        optimizer='fmin_l_bfgs_b', n_restarts_optimizer=0, \n",
+    "                                                        normalize_y=False, \n",
+    "                                                        copy_X_train=True, random_state=None)\n",
+    "\n",
+    "gaussian_process_regression = gaussian_process_regression.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
+    "\n",
+    "\n",
+    "housing_predictions = gaussian_process_regression.predict(test_housing_features)\n",
+    "\n",
+    "housing_predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_predictions = gaussian_process_regression.predict(test_housing_features)"
    ]
   }
  ],
