--- a/scikit-learn-ml/PreprocessingSteps.ipynb
+++ b/scikit-learn-ml/PreprocessingSteps.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -129,11 +129,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-122.23</td>\n",
+       "      <td>37.88</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>880.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>8.3252</td>\n",
+       "      <td>452600.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-122.22</td>\n",
+       "      <td>37.86</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>7099.0</td>\n",
+       "      <td>1106.0</td>\n",
+       "      <td>2401.0</td>\n",
+       "      <td>1138.0</td>\n",
+       "      <td>8.3014</td>\n",
+       "      <td>358500.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>7.2574</td>\n",
+       "      <td>352100.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1274.0</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>558.0</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>5.6431</td>\n",
+       "      <td>341300.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1627.0</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>259.0</td>\n",
+       "      <td>3.8462</td>\n",
+       "      <td>342200.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0    -122.23     37.88                41.0        880.0           129.0   \n",
+       "1    -122.22     37.86                21.0       7099.0          1106.0   \n",
+       "2    -122.24     37.85                52.0       1467.0           190.0   \n",
+       "3    -122.25     37.85                52.0       1274.0           235.0   \n",
+       "4    -122.25     37.85                52.0       1627.0           280.0   \n",
+       "\n",
+       "   population  households  median_income  median_house_value ocean_proximity  \n",
+       "0       322.0       126.0         8.3252            452600.0        NEAR BAY  \n",
+       "1      2401.0      1138.0         8.3014            358500.0        NEAR BAY  \n",
+       "2       496.0       177.0         7.2574            352100.0        NEAR BAY  \n",
+       "3       558.0       219.0         5.6431            341300.0        NEAR BAY  \n",
+       "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"/Users/ukannika/work/personal/machine-learning/datasets/housing.csv\", sep=\",\")\n",
     "df.head()"
@@ -178,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -208,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -313,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -336,11 +460,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Dataset Shape (16512, 10)\n",
+      "Test Dataset Shape (4128, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "train_set, test_set = train_test_split(df, test_size=0.2, random_state=42, shuffle=True, stratify=df['income_category'])\n",
     "\n",
@@ -354,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,6 +848,13 @@
     "y_test.to_csv(\"/Users/ukannika/work/personal/machine-learning/datasets/test_housing_labels.csv\", sep=\",\", \n",
     "              header=None,index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
