--- a/scikit-learn-ml/RegressionAlgorithms.ipynb
+++ b/scikit-learn-ml/RegressionAlgorithms.ipynb
@@ -1,8 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Regression Algorithms:\n",
+    "\n",
+    "   **Linear Models**\n",
+    "       1. Linear Regression\n",
+    "       2. Ridge Regression (L2)\n",
+    "       3. Lasso Regression (L1)\n",
+    "       4. ElasticeNet Regression (L1 + L2)\n",
+    "       5. Bayesian Regression\n",
+    "       6. SGDRegressor (MSE Loss)\n",
+    "       \n",
+    "   **Non Linear Models**\n",
+    "       1. Kernel Ridge Regression\n",
+    "       2. KNN Regression\n",
+    "       3. Decision Trees\n",
+    "           a. Random Forest (Bagging -> Solves Variance Problem)\n",
+    "           b. GradientBoosting/XGBoost (Boosting -> Solves Bias Problem)\n",
+    "       4. Guassian Process Regression (RBF Kernel)\n",
+    "       \n",
+    "      \n",
+    "   **Common Loss Functions Used In Regression Algorithms**\n",
+    "       1. MSE\n",
+    "       2. MAE\n",
+    "       3. Huber Loss (Good for outliers)\n",
+    "       4. Gini Impurity (Decision Trees)\n",
+    "       5. Entropy Loss (Decision Trees)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +53,9 @@
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.gaussian_process import GaussianProcessRegressor\n",
-    "from sklearn.gaussian_process.kernels import RBF, WhiteKernel, RationalQuadratic, ExpSineSquared"
+    "from sklearn.gaussian_process.kernels import RBF, WhiteKernel, RationalQuadratic, ExpSineSquared, ConstantKernel\n",
+    "import plotly.express as px\n",
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -279,7 +312,7 @@
     "                                        n_iter_no_change=5, warm_start=False,\n",
     "                                        average=False)\n",
     "\n",
-    "sgd_regressor = sgd_regressor.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
+    "sgd_regressor.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
     "\n",
     "housing_predictions = sgd_regressor.predict(test_housing_features)\n",
     "\n",
@@ -318,7 +351,7 @@
     "                                  min_impurity_split=None, presort='deprecated',\n",
     "                                  ccp_alpha=0.0)\n",
     "\n",
-    "decision_tree_regressor = decision_tree_regressor.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
+    "decision_tree_regressor.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
     "\n",
     "\n",
     "housing_predictions = decision_tree_regressor.predict(housing_features_simple_imputer)\n",
@@ -387,7 +420,7 @@
     "                                             warm_start=False, \n",
     "                                             ccp_alpha=0.0, max_samples=None)\n",
     "\n",
-    "random_forest_regressor = random_forest_regressor.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
+    "random_forest_regressor.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
     "\n",
     "\n",
     "housing_predictions = random_forest_regressor.predict(test_housing_features)\n",
@@ -423,7 +456,7 @@
     "                                      warm_start=False, presort='deprecated', validation_fraction=0.1,\n",
     "                                      n_iter_no_change=None, tol=0.0001, ccp_alpha=0.0)\n",
     "\n",
-    "gradient_boosting_regressor = gradient_boosting_regressor.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
+    "gradient_boosting_regressor.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
     "\n",
     "\n",
     "housing_predictions = gradient_boosting_regressor.predict(test_housing_features)\n",
@@ -451,26 +484,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k1 = 66.0**2 * RBF(length_scale=67.0)  # long term smooth rising trend\n",
-    "k2 = 2.4**2 * RBF(length_scale=90.0) \\\n",
-    "    * ExpSineSquared(length_scale=1.3, periodicity=1.0)  # seasonal component\n",
-    "# medium term irregularity\n",
-    "k3 = 0.66**2 \\\n",
-    "    * RationalQuadratic(length_scale=1.2, alpha=0.78)\n",
-    "k4 = 0.18**2 * RBF(length_scale=0.134) \\\n",
-    "    + WhiteKernel(noise_level=0.19**2)  # noise terms\n",
-    "kernel_gpml = k1 + k2 + k3 + k4\n",
-    "gaussian_process_regression = GaussianProcessRegressor(kernel=k1, alpha=0.001, \n",
+    "rbf_kernel = 10 * RBF(length_scale=10.5) # long term smooth rising trend\n",
+    "gaussian_process_regression = GaussianProcessRegressor(kernel=rbf_kernel, alpha=0.001, \n",
     "                                                        optimizer='fmin_l_bfgs_b', n_restarts_optimizer=0, \n",
     "                                                        normalize_y=False, \n",
-    "                                                        copy_X_train=True, random_state=None)\n",
+    "                                                        copy_X_train=False, random_state=None)\n",
     "\n",
-    "gaussian_process_regression = gaussian_process_regression.fit(housing_features_simple_imputer, housing_labels.values.ravel())\n",
-    "\n",
-    "\n",
-    "housing_predictions = gaussian_process_regression.predict(test_housing_features)\n",
-    "\n",
-    "housing_predictions"
+    "gaussian_process_regression = gaussian_process_regression.fit(housing_features_simple_imputer, housing_labels.values.ravel())"
    ]
   },
   {
@@ -479,8 +499,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "housing_predictions = gaussian_process_regression.predict(test_housing_features)"
+    "housing_predictions, std = gaussian_process_regression.predict(test_housing_features, return_std=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate Error\n",
+    "mse = mean_squared_error(y_true=test_housing_labels, y_pred=housing_predictions, squared=True)\n",
+    "rmse = mean_squared_error(y_true=test_housing_labels, y_pred=housing_predictions, squared=False)\n",
+    "mae = mean_absolute_error(y_true=test_housing_labels, y_pred=housing_predictions)\n",
+    "\n",
+    "print(\"MSE : %0.3f \" % mse)\n",
+    "print(\"RMSE : %0.3f \" % rmse)\n",
+    "print(\"MAE : %0.3f \" % rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Use this code to view how rbf kernel changes with different parameters\n",
+    "def f(x):\n",
+    "    \"\"\"The function to predict.\"\"\"\n",
+    "    return x * np.sin(x)\n",
+    "\n",
+    "X = np.atleast_2d([1., 3., 5., 6., 7., 8.]).T\n",
+    "y = f(X).ravel()\n",
+    "\n",
+    "fig = px.scatter(x=X.ravel(), y=f(X))\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rbf_kernel = ConstantKernel(1.0, (1e-3, 10)) * RBF(10, (1e-2, 1e2))\n",
+    "gp = GaussianProcessRegressor(kernel=rbf_kernel, n_restarts_optimizer=9)\n",
+    "gp.fit(X, y)\n",
+    "\n",
+    "x = np.atleast_2d(np.linspace(0, 10, 1000)).T\n",
+    "y_pred, sigma = gp.predict(x, return_std=True)\n",
+    "\n",
+    "plt.figure()\n",
+    "\n",
+    "plt.plot(x, f(x), 'r:', label=r'$f(x) = x\\,\\sin(x)$')\n",
+    "plt.plot(X, y, 'g.', markersize=10, label='Observations')\n",
+    "plt.plot(x, y_pred, 'y-', label='Prediction')\n",
+    "\n",
+    "plt.fill(np.concatenate([x, x[::-1]]),\n",
+    "         np.concatenate([y_pred - 1.9600 * sigma,\n",
+    "                        (y_pred + 1.9600 * sigma)[::-1]]),\n",
+    "         alpha=.5, fc='b', ec='None', label='95% confidence interval')\n",
+    "\n",
+    "\n",
+    "plt.xlabel('$x$')\n",
+    "plt.ylabel('$f(x)$')\n",
+    "plt.ylim(-10, 20)\n",
+    "plt.legend(loc='upper left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
