--- a/scikit-learn-ml/RegressionAlgorithms.ipynb
+++ b/scikit-learn-ml/RegressionAlgorithms.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +67,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "housing_features_simple_imputer (16512, 13) \n",
+      "housing_features_iterative_imputer (16512, 13) \n",
+      "housing_features_knn_imputer (16512, 13) \n",
+      "housing_labels (16512, 1) \n",
+      "test_housing_features (4128, 13) \n",
+      "test_housing_labels (4128, 1) \n"
+     ]
+    }
+   ],
    "source": [
     "housing_features_simple_imputer = pd.read_csv(\"/Users/ukannika/work/personal/machine-learning/datasets/housing_features_simple_imputer.csv\", \n",
     "                 sep=\",\", header=None)\n",
@@ -116,9 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE : 5143803045.215 \n",
+      "RMSE : 71720.311 \n",
+      "MAE : 71720.311 \n"
+     ]
+    }
+   ],
    "source": [
     "linear_regression = LinearRegression().fit(housing_features_simple_imputer, housing_labels)\n",
     "housing_predictions = linear_regression.predict(test_housing_features)\n",
@@ -135,9 +158,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE : 5143803045.215 \n",
+      "RMSE : 71720.311 \n",
+      "MAE : 71720.311 \n"
+     ]
+    }
+   ],
    "source": [
     "linear_regression = LinearRegression().fit(housing_features_iterative_imputer, housing_labels)\n",
     "housing_predictions = linear_regression.predict(test_housing_features)\n",
@@ -154,9 +187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -267243.7579539 ,  -238850.37693415,    54721.32156683,\n",
+       "         -169726.57116036,   465832.12901601, -1409050.24035626,\n",
+       "          388581.28993895,   563054.30436294,   -18200.31344319,\n",
+       "          -58096.30579641,   113221.39522316,   -22237.76246165,\n",
+       "          -14687.01352192]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linear_regression.coef_"
    ]
@@ -173,9 +221,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE : 4998357102.495 \n",
+      "RMSE : 70699.060 \n",
+      "MAE : 70699.060 \n"
+     ]
+    }
+   ],
    "source": [
     "# For this example, we may not see any improve by using Lasso/Ridge Regression.\n",
     "# Tune hyperparameter alpha\n",
@@ -194,9 +252,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE : 5141196321.752 \n",
+      "RMSE : 71702.136 \n",
+      "MAE : 71702.136 \n"
+     ]
+    }
+   ],
    "source": [
     "lasso = Lasso(alpha=0.3, max_iter=50000).fit(housing_features_simple_imputer, housing_labels)\n",
     "housing_predictions = lasso.predict(test_housing_features)\n",
@@ -213,9 +281,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuning hyperparameters via grid search\n",
+      "Grid search took 0.28 seconds\n",
+      "Grid search accuracy: 61.37%\n",
+      "Grid search best parameters: {'alpha': 0.30000000000000004}\n"
+     ]
+    }
+   ],
    "source": [
     "# construct the set of hyperparameters to tune\n",
     "print(\"Tuning hyperparameters via grid search\")\n",
