--- a/TimeSeriesAnalysis/TimeseriesStatsModels.ipynb
+++ b/TimeSeriesAnalysis/TimeseriesStatsModels.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('../datasets/AirPassengers.csv', parse_dates=['Month'], index_col='Month', date_parser=dateparser)\n",
+    "data = pd.read_csv('../datasets/AirPassengers.csv', parse_dates=['Month'], index_col='Month')\n",
     "data.head(2)"
    ]
   },
@@ -119,7 +119,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "ts = data['#Passengers'] \n",
@@ -252,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Remove trend from original data\n",
@@ -800,7 +804,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
